# UrQuanMastersUWP

sc2/: .gitignore  CMakeLists.txt  CMakeMacros.txt  ChangeLog  INSTALL.msvc_vcpkg  README
sc2/dependencies/SDL-1.2.15-src/SDL-1.2.15/VisualC/: SDL.sln
sc2/dependencies/SDL-1.2.15-src/SDL-1.2.15/VisualC/SDL/: SDL.vcxproj
sc2/dependencies/SDL-1.2.15-src/SDL-1.2.15/VisualC/SDLmain/: SDLmain.vcxproj
sc2/dependencies/zlib-1.2.11/zlib-1.2.11/contrib/masmx86/: inffas32.lst  match686.lst
sc2/dependencies/zlib-1.2.11/zlib-1.2.11/contrib/vstudio/vc14/: miniunz.vcxproj  minizip.vcxproj  testzlib.vcxproj  testzlibdll.vcxproj  zlibstat.vcxproj  zlibvc.vcxproj
sc2/doc/devel/: dialogs  setupmenu
sc2/doc/users/: manual.txt
sc2/src/: CMakeInclude.txt  config.h  config_vs2017.h  options.c  port.c  port.h  types.h  uqm.c
sc2/src/getopt/: CMakeInclude.txt
sc2/src/libs/: compiler.h  gfxlib.h
sc2/src/libs/callback/: CMakeLists.txt
sc2/src/libs/cdp/: CMakeLists.txt
sc2/src/libs/decomp/: CMakeLists.txt
sc2/src/libs/file/: CMakeLists.txt  dirs.c
sc2/src/libs/graphics/: CMakeLists.txt  frame.c  gfx_common.c  gfx_common.h  tfb_draw.h
sc2/src/libs/graphics/sdl/: Makeinfo  nearest2x.c  opengl.c  pure.c  pure.h  rotozoom.c  sdl_common.c  sdl_common.h
sc2/src/libs/heap/: CMakeLists.txt
sc2/src/libs/input/: CMakeLists.txt
sc2/src/libs/list/: CMakeLists.txt
sc2/src/libs/log/: CMakeLists.txt  msgbox_win.c  uqmlog.c
sc2/src/libs/lua/: CMakeLists.txt
sc2/src/libs/luauqm/: CMakeLists.txt
sc2/src/libs/math/: CMakeLists.txt
sc2/src/libs/md5/: CMakeLists.txt
sc2/src/libs/memory/: CMakeLists.txt
sc2/src/libs/mikmod/: CMakeLists.txt
sc2/src/libs/network/: wspiapiwrap.h
sc2/src/libs/resource/: CMakeLists.txt
sc2/src/libs/sound/: CMakeLists.txt  trackint.h  trackplayer.c  trackplayer.h
sc2/src/libs/sound/decoders/: modaud.c
sc2/src/libs/sound/mixer/sdl/: audiodrv_sdl.c
sc2/src/libs/strings/: CMakeLists.txt
sc2/src/libs/task/: CMakeLists.txt
sc2/src/libs/threads/: CMakeLists.txt
sc2/src/libs/threads/sdl/: sdlthreads.c
sc2/src/libs/time/: CMakelists.txt
sc2/src/libs/uio/: CMakeLists.txt  paths.c  types.h  uioport.h  utils.c
sc2/src/libs/uio/stdio/: stdio.c
sc2/src/libs/video/: CMakeLists.txt
sc2/src/uqm/: CMakeInclude.txt  cnctdlg.c  comm.c  commglue.c  commglue.h  controls.h  encount.c  gameopt.c  gamestr.h  getchar.c  menu.c  outfit.c  pickship.c  restart.c  save.c  save.h  setupmenu.c  setupmenu.h  shipstat.c  shipyard.c  sis.c  sis.h  starbase.c  starbase.h  starmap.c  starmap.h  status.c  uqmdebug.c
sc2/src/uqm/comm/: CMakeInclude.txt
sc2/src/uqm/comm/melnorm/: melnorm.c
sc2/src/uqm/comm/shofixt/: shofixt.c
sc2/src/uqm/lua/: CMakeInclude.txt
sc2/src/uqm/lua/luafuncs/: CMakeInclude.txt
sc2/src/uqm/planets/: CMakeInclude.txt  cargo.c  lander.c  lander.h  orbits.c  planets.h  pstarmap.c  report.c  roster.c  scan.c  solarsys.c
sc2/src/uqm/planets/generate/: CMakeInclude.txt
sc2/src/uqm/ships/: CMakeInclude.txt
sc2/src/uqm/supermelee/: CMakeInclude.txt  loadmele.c  melee.c  pickmele.c
sc2/src/uqm/supermelee/netplay/: CMakeInclude.txt
